--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
+    "env": "0.0.2",
     "express": "^4.16.3",
-    "mongoose": "^5.3.16",
+    "mongojs": "^3.1.0",
+    "mongoose": "^5.10.9",
     "morgan": "^1.9.1"
   }
 }
