--- a/package.json
+++ b/package.json
@@ -18,5 +18,14 @@
     "mongojs": "^3.1.0",
     "mongoose": "^5.10.9",
     "morgan": "^1.9.1"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nkleinmann/Workout-Tracker.git"
+  },
+  "bugs": {
+    "url": "https://github.com/nkleinmann/Workout-Tracker/issues"
+  },
+  "homepage": "https://github.com/nkleinmann/Workout-Tracker#readme"
 }
